<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.blogspot.ahyadroid.infotaktakan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_event" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard2"
            app:destination="@id/navigation_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.blogspot.ahyadroid.infotaktakan.ui.dashboard.DashboardFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.blogspot.ahyadroid.infotaktakan.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>